<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.main.MainActivity">

    <FrameLayout
        android:id="@+id/home_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

<!--    <androidx.recyclerview.widget.RecyclerView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="0dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textView" />-->

    <View style="@style/divider_line_1dp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="@dimen/home_bottom_height"
        android:paddingTop="1dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_news_page"
            style="@style/home_bottom_item_style"
            android:drawableTop="@drawable/rb_news_selector"
            android:textColor="@drawable/bottom_text_selector"
            android:text="@string/rb_bottom_index_label" />

        <RadioButton
            android:id="@+id/rb_project_page"
            style="@style/home_bottom_item_style"
            android:drawableTop="@drawable/rb_project_selector"
            android:text="@string/rb_bottom_guide_label"
            android:textColor="@drawable/bottom_text_selector"/>

        <RadioButton
            android:id="@+id/rb_part_page"
            style="@style/home_bottom_item_style"
            android:drawableTop="@drawable/rb_part_selector"
            android:text="@string/rb_bottom_public_label"
            android:textColor="@drawable/bottom_text_selector"/>

        <RadioButton
            android:id="@+id/rb_public_page"
            style="@style/home_bottom_item_style"
            android:drawableTop="@drawable/rb_public_selector"
            android:text="@string/rb_bottom_question_label"
            android:textColor="@drawable/bottom_text_selector" />

        <RadioButton
            android:id="@+id/rb_mine_page"
            style="@style/home_bottom_item_style"
            android:drawableTop="@drawable/rb_mine_selector"
            android:text="@string/rb_bottom_mine_label"
            android:textColor="@drawable/bottom_text_selector"/>
    </RadioGroup>

    <View style="@style/divider_line_1dp"/>

</LinearLayout>